# rag

./: .dockerignore  .env.example  .gitignore  LEARNING_LOG.md  Makefile  README.md  pyproject.toml
.claude/skills/senior-frontend/: SKILL.md
advanced_rag/: __init__.py
advanced_rag/agents/: agent.py  pipeline.py
advanced_rag/core/: cli.py  config.py
advanced_rag/llm/: embadding.py  gemini.py  generate.py
advanced_rag/observability/: langufuse.py
advanced_rag/router/: api.py
advanced_rag/schema/: schema.py
advanced_rag/tools/: agent.py  chunking.py  crag.py  evaluate.py  graph.py  loaders.py  query_understanding.py  rerank.py  retriever.py  store.py
data/: eval.json
data/sample/: acme_customers.md  acme_product.md
docs/: 00-overview.md  01-architecture.md  02-ingestion-and-chunking.md  03-hybrid-retrieval.md  04-reranking.md  05-query-understanding.md  06-grounding-and-crag.md  07-graphrag.md  08-agentic-rag.md  09-evaluation.md  10-practical-rollout.md  11-realtime-trace-dashboard.md
examples/: quickstart.py
infra/: docker-compose.dev.yaml  docker-compose.yaml
infra/docker/: Dockerfile  Dockerfile.dev
tests/: test_integration_stub.py  test_offline.py
ui/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/health/: route.ts
ui/components/: chat-history.tsx  chat-input.tsx  message-bubble.tsx  rag-panel.tsx  top-bar.tsx
ui/lib/: api.ts
ui/types/: index.ts
