[project]
name = "advanced-rag"
version = "0.1.0"
description = "An advanced, production-shaped Retrieval-Augmented Generation pipeline built on Google Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.20.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "networkx>=3.2",
    "pypdf>=4.2",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "langfuse>=4.9.1",
    "pgvector>=0.4.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "openai>=2.43.0",
    "openinference-instrumentation-google-genai>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
arag = "advanced_rag.cli:app"
arag-api = "advanced_rag.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["advanced_rag"]
